# garbled-circuit-utility

./: .gitignore  UGP.code-workspace  library_notes.md  readLib.md
garbled_circuits_utility/: .gitignore  PROJECT_SUMMARY.md  README.md  build.sh  plot.py  script.py  script_1.py  script_10.py  script_11.py  script_12.py  script_13.py  script_2.py  script_3.py  script_4.py  script_5.py  script_6.py  script_7.py  script_8.py  script_9.py  test.sh
garbled_circuits_utility/cmake/: FindLibOTe.cmake
garbled_circuits_utility/examples/: adder64.txt  half_adder.txt  millionaires.cpp  millionaires_4bit.txt  millionaires_simple.txt  mult64.txt  simple_and.cpp  simple_and.txt  simple_or.txt  simple_xor.txt  two-bit-adder.txt
garbled_circuits_utility/include/: common.h
garbled_circuits_utility/src/: crypto_utils.cpp  crypto_utils.h  evaluator.cpp  garbled_circuit.cpp  garbled_circuit.h  garbler.cpp  main.cpp  ot_handler.cpp  ot_handler.h  socket_utils.cpp  socket_utils.h
linking/: CMakeLists.txt  iknp_ot_example.cpp  simplest_ot_example.cpp
